[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds_utils"
version = "0.0.1"
authors = [
  { name="Constantin Selzer", email="Constantin.Selzer@hm.edu" },
]
description = "Utils for DeepScenario Dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'scipy~=1.9.0',
  'matplotlib==3.5.0',
  'open3d==0.17.0',
  'tqdm==4.62.3',
  'opendrive2lanelet==1.2.1',
  'lxml==4.8.0',
  'PyQt5==5.14.1',
]

[project.urls]
"Homepage" = "https://github.com/SelzerConst"
"Bug Tracker" = "https://github.com/SelzerConst"